# protobuf-android-ios

./: .gitignore  README.md
android_library/: settings.gradle
android_library/gradle/wrapper/: gradle-wrapper.properties
android_library/protobuf/: build.gradle
android_library/protobuf/src/main/: AndroidManifest.xml  CMakeLists.txt
android_library/protobuf/src/main/cpp/: native-lib.cpp
